# FedTruthFinderImpl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  run_test.ps1
config/: client1.json  client_2.json  client_3.json  client_4.json  client_5.json  client_6.json  error_rates_for_each_client.csv  master_template.json  server.json  slave_template.json
config/event/: listeners.txt  raw_event_records_1000.csv
config/event_SF_100/: acgerl.csv  agcowktu.csv  ancedvab.csv  anupwr.csv  ascley.csv  atcilav.csv  eglohabs.csv  enidmopt.csv  eokracy.csv  etirnfew.csv  evijcey.csv  ewvnil.csv  iacbyb.csv  icdaheos.csv  imhacy.csv  ioivkn.csv  ojbaso.csv  onyacju.csv  ugifmav.csv  unquekov.csv  usadrifo.csv
config/event_SF_20/: amknywr.csv  apigcyd.csv  apsskyul.csv  ekenucki.csv  enjubpl.csv  epemvagu.csv  iafstnue.csv  ijhipvo.csv  ubgihoot.csv  ubjaju.csv  upsjavci.csv
config/event_SF_40/: amknywr.csv  apigcyd.csv  oygmebra.csv  utwoab.csv
config/event_SF_60/: ekenucki.csv  epemvagu.csv  eufdod.csv  idholv.csv  ijhipvo.csv  iovlito.csv  odocjeca.csv  ogdygdyd.csv  onkawcel.csv
config/event_SF_80/: abmuyawm.csv  ancyclsu.csv  apsskyul.csv  asigno.csv  ayshekki.csv  eavflid.csv  efgoaku.csv  eicmynts.csv  enarwee.csv  enjubpl.csv  eoivqued.csv  equoaw.csv  ichankru.csv  icodmup.csv  ilcoby.csv  otscokdr.csv  ucgewft.csv  utjanre.csv
config/event_standalone/: raw_event_records_1000.bac.csv  raw_event_records_1000.csv
data/: Case SF.ipynb  SF_event_generation.ipynb  error_rate_for_each_client.ipynb  error_rate_statistics.ipynb  false_rate_statistics_SF.ipynb
data/data/SF/: centers.csv  centers_100.csv  centers_100_labeled.csv  error_rates.csv  waiting_positions.csv
data/data/SF/event_SF_100/: awribig.csv  eincufpy.csv  elhuyoi.csv  eoccoirv.csv  eoydba.csv  ewedkl.csv  ickviya.csv  ifkalda.csv  indtwrat.csv  inhiala.csv  ishvirv.csv  obsimjio.csv  ocwyit.csv  odklobci.csv  okavkau.csv  oljnek.csv  oquiat.csv  ubjaju.csv  umsmtha.csv  upsjavci.csv  urfhod.csv  uthsyis.csv  uvburki.csv
data/data/SF/event_SF_20/: asigno.csv  eicmynts.csv  ichankru.csv  odocjeca.csv  ojwyky.csv  ophgir.csv  oquiat.csv  ugifmav.csv  utwoab.csv
data/data/SF/event_SF_40/: iafstnue.csv  insodfl.csv
data/data/SF/event_SF_60/: acpegho.csv  adpaifo.csv  ainplin.csv  enekbl.csv  itcemra.csv  itpivoa.csv  odscixam.csv  ophgir.csv  ugthfu.csv
data/data/SF/event_SF_80/: agivle.csv  atidfi.csv  auctjir.csv  eshria.csv  (+9 more)
data/event/: raw_event_records_1000.csv
process description/: process description.md
proto/: algo.proto  client_management.proto  master.proto  pubsub.proto  relay.proto  slave.proto  survey.proto
result/: 200.csv  6-200.csv
src/: algo_client.rs  algo_server.rs  algo_util.rs  broadcast_raw_event.rs  client.rs  client_management.rs  config.rs  configuration_generator.rs  deamon_deprecated.rs  deamon_error.rs  deamon_set.rs  echo.rs  event.rs  forward_deamons.rs  h_deamons.rs  id.rs  leaderboard_deamons.rs  lib.rs  master.rs  master_server.rs  server.rs  slave.rs  slave_server.rs  summation_deamons.rs
src/common/: client_management.rs  config.rs  id.rs  mod.rs
src/deamon/: deamon_error.rs  deamon_set.rs  forward_deamons.rs  h_apostrophe_deamons.rs  h_deamons.rs  leaderboard_deamons.rs  mod.rs  summation_deamons_deprecated.rs
